--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "bottleneck": "^2.3.0",
     "debug": "^3.1.0",
     "lodash": "^4.17.5",
     "request": "^2.83.0",
