--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "bottleneck": "^2.3.0",
     "debug": "^3.1.0",
+    "limiter": "^1.1.3",
     "lodash": "^4.17.5",
     "request": "^2.87.0",
     "request-promise": "^4.2.2"
